--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,16 @@
 <header class="site-header">
-    <h1 class="logo">Dianoetic</h1>
-    <nav>
-    <a href="/">Home</a>
-    <a href="/services">Services</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
+  <div class="container">
+    <a href="/" class="brand">
+      <img src="/assets/img/logo_0_0.png" alt="Dianoetic logo">
+      <span class="site-title">Dianoetic</span>
+    </a>
+    <nav class="main-nav">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/services/">Services</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
     </nav>
+  </div>
 </header>
