--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }} | Dianoetic</title>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{{ '/assets/css/main_warm_monochrome.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}">
