--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
   {% include head.html %}
 </head>
@@ -13,6 +15,6 @@
     {{ content }}
   </main>
   {% include footer.html %}
-
+  <script src="{{ '/assets/js/nav-toggle.js' | relative_url }}"></script>
 </body>
 </html>
