--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,9 @@
     <nav class="main-nav">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/about/">About</a></li>
-        <li><a href="/contact/">Contact</a></li>
+        <a href="{{ '/services/' | relative_url }}">Services</a></li>
+        <a href="{{ '/about/' | relative_url }}">About</a></li>
+        <a href="{{ '/contact/' | relative_url }}">Contact</a></li>
       </ul>
     </nav>   
     <div class="nav-backdrop"></div>
