Updated issues re Bing Webmaster

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,3 +49,6 @@
 <meta name="twitter:description" content="Human‑centred data and research solutions for nonprofits and advocacy groups.">
 <meta name="twitter:image" content="https://www.dianoetic.com.au/assets/img/logo.png">
 
+<meta http-equiv="Content-Language" content="en">
+<meta name="author" content="Pooya Karambakhsh">
+
