20251008 Added modifications to fix redirect issues

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,3 +52,4 @@
 <meta http-equiv="Content-Language" content="en">
 <meta name="author" content="Pooya Karambakhsh">
 
+<link rel="canonical" href="https://www.dianoetic.com.au{{ page.url }}">
